WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215368
iOS: Scrolling and touch events sporadically stop working after navigating
https://bugs.webkit.org/show_bug.cgi?id=215368
Summary
iOS: Scrolling and touch events sporadically stop working after navigating
Tim Horton
Reported
2020-08-11 03:53:09 PDT
iOS: Scrolling and touch events sporadically stop working after navigating
Attachments
Patch
(22.17 KB, patch)
2020-08-11 03:53 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.97 KB, patch)
2020-08-11 03:55 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.93 KB, patch)
2020-08-11 13:17 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-08-11 03:53:57 PDT
Created
attachment 406372
[details]
Patch
Tim Horton
Comment 2
2020-08-11 03:53:59 PDT
<
rdar://problem/65801531
>
Tim Horton
Comment 3
2020-08-11 03:55:55 PDT
Created
attachment 406373
[details]
Patch
Wenson Hsieh
Comment 4
2020-08-11 07:47:43 PDT
Comment on
attachment 406373
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406373&action=review
> LayoutTests/fast/events/touch/ios/touch-event-stall-after-navigating-with-pending-asynchronous-touch-start.html:19 > + await new Promise((resolve) => { testRunner.runUIScriptImmediately(` > + uiController.doubleTapAtPoint(${x}, ${y}, .01, function() { > + uiController.uiScriptComplete(); > + });`, resolve) });
Nit - the indentation looks a bit off here.
Simon Fraser (smfr)
Comment 5
2020-08-11 10:25:31 PDT
Comment on
attachment 406373
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406373&action=review
> Source/WebKit/WebProcess/WebPage/EventDispatcher.cpp:179 > +void EventDispatcher::takeQueuedTouchEventsForPage(const WebPage& webPage, TouchEventQueue& destinationQueue)
Why doesn't this just return a TouchEventQueue?
Devin Rousso
Comment 6
2020-08-11 10:48:23 PDT
Comment on
attachment 406373
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406373&action=review
> LayoutTests/fast/events/touch/ios/touch-event-stall-after-navigating-with-pending-asynchronous-touch-start.html:16 > + await new Promise((resolve) => { testRunner.runUIScriptImmediately(`
NIT: why is this `Promise` needed?
Tim Horton
Comment 7
2020-08-11 13:16:11 PDT
Comment on
attachment 406373
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406373&action=review
>> Source/WebKit/WebProcess/WebPage/EventDispatcher.cpp:179 >> +void EventDispatcher::takeQueuedTouchEventsForPage(const WebPage& webPage, TouchEventQueue& destinationQueue) > > Why doesn't this just return a TouchEventQueue?
🤷♂️ probably predates `move` Not going to fix it now, but it's a good point.
>> LayoutTests/fast/events/touch/ios/touch-event-stall-after-navigating-with-pending-asynchronous-touch-start.html:16 >> + await new Promise((resolve) => { testRunner.runUIScriptImmediately(` > > NIT: why is this `Promise` needed?
You are right! It's not (and I don't totally understand why the test works anymore, but it does).
>> LayoutTests/fast/events/touch/ios/touch-event-stall-after-navigating-with-pending-asynchronous-touch-start.html:19 >> + });`, resolve) }); > > Nit - the indentation looks a bit off here.
Devin said the same thing, but it looks right to me‽ I am confused :) Maybe getting rid of the promise will help.
Tim Horton
Comment 8
2020-08-11 13:17:45 PDT
Created
attachment 406410
[details]
Patch
EWS
Comment 9
2020-08-11 14:04:15 PDT
Committed
r265515
: <
https://trac.webkit.org/changeset/265515
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406410
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug