Tools/WebKitTestRunner/TestInvocation.h
@@ -130,6 +130,7 @@ private:
         TestInvocation* testInvocation;
     };
     static void runUISideScriptAfterUpdateCallback(WKErrorRef, void* context);
+    static void runUISideScriptImmediately(WKErrorRef, void* context);
 
     bool shouldLogHistoryClientCallbacks() const;
 
